# tinta

./: .gitignore  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  DESCRIPTION.rst  HIPPOCRATIC_LICENSE.md  LICENSE  MANIFEST.in  Pipfile  README.md  license.md  publish.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish-test.yml  publish.yml  run-tests.yml  run_tests.yml
examples/: basic_example.py  basic_usage.py  colors.ini  colors.yaml  complete_example.py
junit/: test-results.xml
tests/: conftest.py  test_colors_invalid.ini  test_discover.py  test_tinta.py
tinta/: __init__.py  __main__.py  ansi.py  colorize.py  colors.ini  colors.yaml  constants.py  discover.py  multi_version_imports.py  stylize.py  tinta.py  typ.py  utils.py
