#!/usr/bin/env python

# Tinta
# Copyright 2023 github.com/brandoncript

# This program is bound to the Hippocratic License 2.1
# Full text is available here:
# https://firstdonoharm.dev/version/2/1/license

# Further to adherence to the Hippocratic Licenese, permission is hereby
# granted, free of charge, to any person obtaining a copy of this software
# and associated documentation files (the "Software") under the terms of the
# MIT License to deal in the Software without restriction, including without
# limitation the rights to use, copy, modify, merge, publish, distribute,
# sublicense, and / or sell copies of the Software, and to permit persons
# to whom the Software is furnished to do so, subject to the conditions layed
# out in the MIT License.

# Where a conflict or dispute would arise between these two licenses, HLv2.1
# shall take precedence.

[project]
name = "tinta"
version = "0.1.5b1"
description = "Tinta, a magical console output tool."
 authors = [
  { name="Brandon Shelley", email="brandon@pacificaviator.co" },
]
license = "MIT"
readme = "README.md"
keywords = ["console", "colors", "ansi", "print", "terminal", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.urls]
homepage = "https://github.com/brandonscript/tinta" 
repository = "https://github.com/brandonscript/tinta"

[tool.hatchling]

[tool.hatchling.dependencies]
python = "^3.6"
ansicolors = "^1.1.8"

[tool.hatchling.dev-dependencies]
pytest = "^6.2.4"
twine = "^3.4.2"
wheel = "^0.36.2"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "../tinta",
]